Archive2/5d/934086a7e260ec/output
main.cpp: In function 'int main()':
main.cpp:5:40: error: invalid initialization of non-const reference of type 'std::string& {aka std::basic_string<char>&}' from an rvalue of type 'std::string {aka std::basic_string<char>}'
     std::string &x = std::string("Test");
                                        ^
