Archive2/5d/934086a7e260ec/main.cpp
#include <iostream>

int main()
{
    std::string &x = std::string("Test");
    
    std::cout << x << std::endl;
    
    return 0;
}